--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width" />s
+		<link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials"/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
