--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />s
+		<meta name="viewport" content="width=device-width" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.webmanifest" crossorigin="use-credentials"/>
 		%sveltekit.head%
 	</head>
